fix: add swagger auth
