# bizdemo/mall/business/mall_api/main.go
@@ -74,6 +74,9 @@ func Init() {
 
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+// @securityDefinitions.apikey TokenAuth
+// @in header
+// @name Authorization
 
 // @host localhost:8080
 // @BasePath /
